--- a/index.html
+++ b/index.html
@@ -150,8 +150,10 @@
                             dark/light mode warping.</p>
                         <div class="tech-stack"><span>HTML5</span><span>CSS3</span><span>JS</span></div>
                         <div class="project-links">
-                            <a href="https://github.com/KishanDavda-IT" target="_blank" class="link-btn"><i
-                                    class="fab fa-github"></i> Source</a>
+                            <a href="https://github.com/KishanDavda-IT/KishanDavda-IT-portfolio" target="_blank"
+                                class="link-btn"><i class="fab fa-github"></i> Code</a>
+                            <a href="https://kishandavda-it.github.io/KishanDavda-IT-portfolio/" target="_blank"
+                                class="link-btn"><i class="fas fa-external-link-alt"></i> Live</a>
                         </div>
                     </div>
                 </div>
