Add Real-Time Chat App project card and Tech Stack section

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         development workflow.
                     </p>
                     <div class="stats-container">
-                        <div class="stat-box"><span class="stat-number" data-target="5">0</span><span
+                        <div class="stat-box"><span class="stat-number" data-target="3">0</span><span
                                 class="stat-desc">Projects</span></div>
                         <div class="stat-box"><span class="stat-number" data-target="100">0</span>%<span
                                 class="stat-desc">Commitment</span></div>
@@ -118,6 +118,45 @@
             </div>
         </div>
     </section>
+
+    <section id="skills" class="section bg-alt">
+        <div class="container">
+            <h2 class="section-title">Tech Stack</h2>
+            <div class="skills-grid">
+                <div class="skills-category">
+                    <h3><i class="fas fa-laptop-code"></i> Frontend</h3>
+                    <div class="skills-list">
+                        <span class="skill-tag">HTML5</span>
+                        <span class="skill-tag">CSS3</span>
+                        <span class="skill-tag">JavaScript</span>
+                        <span class="skill-tag">React</span>
+                        <span class="skill-tag">Tailwind CSS</span>
+                        <span class="skill-tag">Responsive Design</span>
+                    </div>
+                </div>
+                <div class="skills-category">
+                    <h3><i class="fas fa-server"></i> Backend</h3>
+                    <div class="skills-list">
+                        <span class="skill-tag">Node.js</span>
+                        <span class="skill-tag">Express</span>
+                        <span class="skill-tag">Python</span>
+                        <span class="skill-tag">Socket.io</span>
+                        <span class="skill-tag">REST APIs</span>
+                    </div>
+                </div>
+                <div class="skills-category">
+                    <h3><i class="fas fa-tools"></i> Tools & Others</h3>
+                    <div class="skills-list">
+                        <span class="skill-tag">Git & GitHub</span>
+                        <span class="skill-tag">Automation</span>
+                        <span class="skill-tag">Prompt Engineering</span>
+                        <span class="skill-tag">OLED Optimization</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <section id="projects" class="section">
         <div class="container">
@@ -154,6 +193,21 @@
                                 class="link-btn"><i class="fab fa-github"></i> Code</a>
                             <a href="https://kishandavda-it.github.io/KishanDavda-IT-portfolio/" target="_blank"
                                 class="link-btn"><i class="fas fa-external-link-alt"></i> Live</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="project-img-placeholder" style="background: linear-gradient(45deg, #7c3aed, #000000);">
+                        <i class="fas fa-comments"></i>
+                    </div>
+                    <div class="project-content">
+                        <h3>Real-Time Chat App</h3>
+                        <p>A real-time messaging application built with Socket.io, Node.js, and Express. Featuring
+                            seamless communication and a modern dark-themed UI.</p>
+                        <div class="tech-stack"><span>Socket.io</span><span>Node.js</span><span>Express</span></div>
+                        <div class="project-links">
+                            <a href="https://github.com/KishanDavda-IT/Real-Time-chatapp" target="_blank"
+                                class="link-btn"><i class="fab fa-github"></i> Code</a>
                         </div>
                     </div>
                 </div>
